updated contact info

--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
     <header>
         <h1>Stuart Wilson</h1>
         <p>Software Developer | Python, Go, JavaScript, SQL</p>
-        <p><a href="mailto:stuwilson@gmail.com">stuwilson@gmail.com</a> | <a href="tel:+447590010521">07590 010521</a></p>
         <p><a href="https://github.com/5tuartw" target="_blank">GitHub Profile</a></p>
     </header>
 
     <section id="summary">
         <h2>Professional Summary</h2>
-        <p>Highly motivated and results-oriented, with 15+ years of experience in science and computing education, seeking to transition into a software development role. Proven ability to rapidly learn and master new technologies, having completed the Boot.dev online back-end development course in Python and Go. Can collaborate effectively in team settings, and articulate complex ideas enthusiastically and clearly. Eager to leverage strong analytical, problem-solving, and project management skills to contribute to innovative and impactful software solutions. [cite: 2, 3, 4, 5]</p>
+        <p>Highly motivated and results-oriented, with 15+ years of experience in science and computing education, seeking to transition into a software development role. Proven ability to rapidly learn and master new technologies, having completed the Boot.dev online back-end development course in Python and Go. Can collaborate effectively in team settings, and articulate complex ideas enthusiastically and clearly. Eager to leverage strong analytical, problem-solving, and project management skills to contribute to innovative and impactful software solutions.</p>
     </section>
 
     <section id="projects">
         <h2>Featured Projects</h2>
         <div class="project-item">
             <h3>Droplet (School Noticeboard App)</h3>
-            <p>A full-stack web application to streamline school communication using a Go REST API (featuring JWT auth, RBAC, PostgreSQL with sqlc, transactions). Containerised with Docker and deployed to Render. [cite: 20, 21]</p>
+            <p>A full-stack web application to streamline school communication using a Go REST API (featuring JWT auth, RBAC, PostgreSQL with sqlc, transactions). Containerised with Docker and deployed to Render.</p>
             <p>
                 <a href="https://droplet-app.onrender.com/" target="_blank">Live Demo</a> |
                 <a href="https://github.com/5tuartw/droplet" target="_blank">GitHub Repository</a>
@@ -31,39 +30,36 @@
         </div>
         <div class="project-item">
             <h3>Bookup (Book Recommendation App with AI)</h3>
-            <p>Combines Python, Flask, Redis, SQLite, Ollama LLM and SpaCy packages to take a list of books a user enjoys and provide recommendations for their next read. [cite: 21]</p>
+            <p>Combines Python, Flask, Redis, SQLite, Ollama LLM and SpaCy packages to take a list of books a user enjoys and provide recommendations for their next read.</p>
             <p>
                 <a href="https://github.com/5tuartw/bookup" target="_blank">GitHub Repository</a>
             </p>
         </div>
-        <div class="project-item">
-            <h3>Workflow Automation Tool (2018)</h3>
-            <p>Used Google Apps Script to track the progress of documentation processed for educational trips and visits and automate emails to stakeholders. [cite: 21]</p>
-        </div>
-         <div class="project-item">
-            <h3>Timetable Management Tool (2017)</h3>
-            <p>Used Google Apps Script to manage changes to the school timetable when staff members were absent and communicate with affected staff. [cite: 22]</p>
-        </div>
     </section>
+    <section id="connect">
+        <h2>Connect</h2>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </section>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
     <section id="education-certifications">
         <h2>Education & Certifications</h2>
         <h3>Boot.dev Backend Developer Career Path</h3>
-        <p>Passed 09/04/2025. Covers Python, Go, SQL, Memory Management in C, Functional Programming, OO Programming, Data Structures and Algorithms, HTTP Clients, Servers, and more. [cite: 23]</p>
-        <p><a href="https://www.boot.dev/u/stuartw" target="_blank">View Boot.dev Profile</a> [cite: 24]</p>
+        <p>Passed 09/04/2025. Covers Python, Go, SQL, Memory Management in C, Functional Programming, OO Programming, Data Structures and Algorithms, HTTP Clients, Servers, and more.</p>
+        <p><a href="https://www.boot.dev/u/stuartw" target="_blank">View Boot.dev Profile</a></p>
         <h3>BSc (Hons) Computer Science (2002)</h3>
-        <p>Awarded 2:1, University of Manchester. Final year project: using AI techniques to analyse web log files to determine how effectively users can reach their destination page. [cite: 15]</p>
+        <p>Awarded 2:1, University of Manchester. Final year project: using AI techniques to analyse web log files to determine how effectively users can reach their destination page.</p>
         <h3>Post-graduate Diploma STEM Education (2024)</h3>
-        <p>Awarded Pass with Merit, King’s College University, London. Courses included ‘Policies and Practice in STEM Education’, ‘Use of Technology in Education, and ‘Making and Creating’. [cite: 17]</p>
+        <p>Awarded Pass with Merit, King’s College University, London. Courses included ‘Policies and Practice in STEM Education’, ‘Use of Technology in Education, and ‘Making and Creating’.</p>
          <h3>PGCE Primary Education with Modern Foreign Languages (2007)</h3>
-        <p>University of East Anglia, Norwich. Including a 1-month teaching placement in Dresden, Germany. [cite: 16]</p>
-        <p>Other certifications include: Certificate in ‘Improving gender balance in computer science’ from the National Centre for Computing Education ‘I belong’ programme[cite: 24], First aid certificate (paediatric) (valid until March 2027)[cite: 25].</p>
+        <p>University of East Anglia, Norwich.</p>
+        <p>Other certifications include: Certificate in ‘Improving gender balance in computer science’ from the National Centre for Computing Education ‘I belong’ programme[cite: 24], First aid certificate (paediatric) (valid until March 2027).</p>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
-        <p><strong>Programming languages:</strong> (recent) Python, Go, JavaScript, SQL; (during undergraduate degree) Java, C, Prolog. [cite: 19]</p>
-        <p>Google Workspace for Education administration. Intermediate Japanese and German language proficiency. [cite: 19]</p>
+        <p><strong>Programming languages:</strong> (recent) Python, Go, JavaScript, SQL; (during undergraduate degree) Java, C, Prolog.</p>
+        <p>Google Workspace for Education administration. Intermediate Japanese and German language proficiency.</p>
     </section>
 
     <section id="work-experience">
@@ -71,43 +67,39 @@
         <h3>Software Developer (freelance)</h3>
         <p>April 2025 - current, Cubic Street Ltd, London</p>
         <ul>
-            <li>Building a Go HTTP redirect service on Google App Engine to track advertisement clicks, handling dynamic URL substitution, HMAC verification and SQL database integration, via Google Cloud Platform. [cite: 6]</li>
+            <li>Building a Go HTTP redirect service on Google App Engine to track advertisement clicks, handling dynamic URL substitution, HMAC verification and SQL database integration, via Google Cloud Platform.</li>
         </ul>
         <h3>Head of Science and Technology</h3>
         <p>Sep 2020 - Mar 2025, Eaton House the Manor Girls’ School, London</p>
         <ul>
-            <li>Curriculum leader for Science and Computing for pupils aged 4 to 11. [cite: 7]</li>
-            <li>Trained and supported 30+ teachers in using technology, increasing classroom technology integration, including Lego Education Prime robotics kits, coding in Scratch, introducing Google Workspace for Education, various AI tools and migrating to a new school MIS. [cite: 7]</li>
+            <li>Curriculum leader for Science and Computing for pupils aged 4 to 11.</li>
+            <li>Trained and supported 30+ teachers in using technology, increasing classroom technology integration, including Lego Education Prime robotics kits, coding in Scratch, introducing Google Workspace for Education, various AI tools and migrating to a new school MIS.</li>
         </ul>
         <h3>Deputy Head Upper School</h3>
         <p>Sep 2017 - Aug 2020, Newton Preparatory School, London</p>
         <ul>
-            <li>Responsible for day-to-day school management, including staffing, events, safeguarding, pastoral care and behaviour management. [cite: 8]</li>
-            <li>Senior member of a working group that delivered a plan to improve the use of technology throughout the school, including introducing one-to-one devices for pupils and staff. [cite: 9]</li>
-            <li>Developed two original applications in Google Apps Script (JavaScript) for automating daily tasks and risk assessment processes, saving an estimated 10 hours per week. [cite: 10]</li>
+            <li>Responsible for day-to-day school management, including staffing, events, safeguarding, pastoral care and behaviour management.</li>
+            <li>Senior member of a working group that delivered a plan to improve the use of technology throughout the school, including introducing one-to-one devices for pupils and staff.</li>
+            <li>Developed two original applications in Google Apps Script (JavaScript) for automating daily tasks and risk assessment processes, saving an estimated 10 hours per week.</li>
         </ul>
         <h3>Head of Science, Head of Year, Head of Co-Curricular Activities</h3>
         <p>Sep 2013 - Aug 2017, Newton Preparatory School, London</p>
         <ul>
-            <li>Managed teams of staff in an academic capacity, as well as having pastoral oversight for Year 6 pupils and their form tutors. [cite: 11]</li>
-            <li>Introduced annual STEAM Week to promote interest in careers and learning related to science, technology, engineering, the arts, and mathematics, coordinating events involving local businesses, professionals, and academics. [cite: 12]</li>
-            <li>Administrator for the school’s Google Workspace for Education account. [cite: 13]</li>
+            <li>Managed teams of staff in an academic capacity, as well as having pastoral oversight for Year 6 pupils and their form tutors.</li>
+            <li>Introduced annual STEAM Week to promote interest in careers and learning related to science, technology, engineering, the arts, and mathematics, coordinating events involving local businesses, professionals, and academics.</li>
+            <li>Administrator for the school’s Google Workspace for Education account.</li>
         </ul>
         <h3>Science Teacher</h3>
         <p>Sep 2010 - Aug 2013, Newton Preparatory School, London</p>
         <ul>
-            <li>Delivered engaging curriculum and successfully prepared students aged 7-13 for entrance exams to prestigious senior schools. [cite: 13]</li>
-            <li>Became a Google Certified Teacher for Google Workspace for Education (previously Google Apps for Education). [cite: 14]</li>
+            <li>Delivered engaging curriculum and successfully prepared students aged 7-13 for entrance exams to prestigious senior schools.</li>
+            <li>Became a Google Certified Teacher for Google Workspace for Education (previously Google Apps for Education).</li>
         </ul>
         <h3>Primary School Teacher</h3>
-        <p>Oct 2007 - Aug 2010, Christchurch Primary School, Brick Lane, London [cite: 15]</p>
+        <p>Oct 2007 - Aug 2010, Christchurch Primary School, Brick Lane, London</p>
         <h3>Assistant Language Teacher</h3>
-        <p>Jul 2002 - Mar 2006, JET Programme, Nara & Hyogo Prefectures, Japan [cite: 15]</p>
+        <p>Jul 2002 - Mar 2006, JET Programme, Nara & Hyogo Prefectures, Japan</p>
 
     </section>
-
-    <footer>
-        <p>References available upon request.</p>
-    </footer>
 </body>
 </html>
