--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     </section>
     <section id="connect">
         <h2>Connect</h2>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
     <section id="education-certifications">
         <h2>Education & Certifications</h2>
