better intro para

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="summary">
         <h2>Professional Summary</h2>
-        <p>Highly motivated and results-oriented, with 15+ years of experience in science and computing education, seeking to transition into a software development role. Proven ability to rapidly learn and master new technologies, having completed the Boot.dev online back-end development course in Python and Go. Can collaborate effectively in team settings, and articulate complex ideas enthusiastically and clearly. Eager to leverage strong analytical, problem-solving, and project management skills to contribute to innovative and impactful software solutions.</p>
+        <p>Drawing on over two decades of experience in education, I've cultivated a strong ability to understand others' needs and respond to them with effective, practical solutions. Coupled with a recent, intensive refresh of my coding and computer science knowledge - specifically through the Boot.dev back-end development course in Python and Go - I am now seeking opportunities to merge this insight with my passion for creating effective software. My approach to work and life is empathetic, pragmatic and optimistic: I like to delve into a problem to understand it thoroughly, prototyping rapidly to find innovative, elegant and performant solutions. I am passionate about finding ways for technology to enhance the various facets of our lives, without distraction or incumberance.</p>
     </section>
 
     <section id="projects">
@@ -38,7 +38,7 @@
     </section>
     <section id="connect">
         <h2>Connect</h2>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeyRAPxng652mWKTvNxxR7wHUgr52WUc89_4rTj9LzToX9W6w/viewform?embedded=true" width="770" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </section>
 
     <section id="education-certifications">
