--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Stuart Wilson</h1>
         <p>Software Developer | Python, Go, JavaScript, SQL</p>
-        <p><a href="https://github.com/5tuartw" target="_blank">GitHub Profile</a></p>
+        <p><a href="https://github.com/5tuartw" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/stuart-wilson-b5b20a350/" target="_blank">LinkedIn</a></p>
     </header>
 
     <div class="tabs-container">
