added tfl bunching detector

--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
                         <a href="https://github.com/5tuartw/bookup" target="_blank">GitHub Repository</a>
                     </p>
                 </div>
+                <div class="project-item">
+                    <h3>TfL Bunching Detector</h3>
+                    <p>A command-line tool that analyses live London bus arrival data using the Transport for London API to detect and report instances of bus bunching on specific routes or stops. Features include stop/route search, configurable bunching threshold, and tabular output of bunching events.</p>
+                    <div class="project-screenshots">
+                        <div class="project-screenshot">
+                            <img src="images/tfl-bunching-stopid.png" alt="TfL Bunching Detector - Stop ID Example">
+                        </div>
+                        <div class="project-screenshot">
+                            <img src="images/tfl-bunching-search.png" alt="TfL Bunching Detector - Search Example">
+                        </div>
+                        <div class="project-screenshot">
+                            <img src="images/tfl-bunching-threshold.png" alt="TfL Bunching Detector - Threshold Example">
+                        </div>
+                    </div>
+                    <p>
+                        <a href="https://github.com/5tuartw/tfl-bunching-detector" target="_blank">GitHub Repository</a>
+                    </p>
+                </div>
             </section>
 
             <section id="experience" class="tab-panel">
